--- a/bio.html
+++ b/bio.html
@@ -32,6 +32,22 @@
             <p>Também já fui contratado para transformar grandes portais, como Terra e G1, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitável.</p>
             <h2 class="subtitulo-texto">Comunidade</h2>
             <p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei <a href="portfolio.html">diversas palestras</a> e mantenho um <a href="blog.html">blog</a>.</p>
+            <h2 class="subtitulo-texto">Resumo</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Habilidade</th>
+                        <th>Experiência</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <th>HTML5</th>
+                        <td>Proficiente</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </main>
     <img src="imagens/eu.jpg" alt="Minha foto" class="minha-foto">
