adicionado tabela com habilidades na pag bio

--- a/bio.html
+++ b/bio.html
@@ -33,11 +33,12 @@
             <h2 class="subtitulo-texto">Comunidade</h2>
             <p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei <a href="portfolio.html">diversas palestras</a> e mantenho um <a href="blog.html">blog</a>.</p>
             <h2 class="subtitulo-texto">Resumo</h2>
-            <table>
+            <table class="habilidades">
                 <thead>
                     <tr>
                         <th>Habilidade</th>
-                        <th>Experiência</th>
+                        <th>Nível</th>
+                        <th>Experiências</th>
                     </tr>
                 </thead>
 
@@ -45,7 +46,32 @@
                     <tr>
                         <th>HTML5</th>
                         <td>Proficiente</td>
+                        <td>Uso em todos os sites que desenvolvo</td>
                     </tr>
+                    <tr>
+                        <th>CSS3</th>
+                        <td>Proficiente</td>
+                        <td>Uso em todos os sites que desenvolvo</td>
+                    </tr>
+                    <tr>
+                        <th>JavaScript</th>
+                        <td>Proficiente</td>
+                        <td>Uso em quase todos os sites que desenvolvo, aplicando-o de forma não obstrusiva</td>
+                    </tr>
+                        <th>Design</th>
+                        <td>Proficiente</td>
+                        <td>Formado em Web Design pela Universidade de Jacarezinho</td> 
+                    <tr>
+                        <th>Git</th>
+                        <td colspan="2" rowspan="3">Estudando</td>
+                    </tr>
+                    <tr>
+                        <th>Java</th>
+                    </tr>
+                    <tr>
+                        <th>Angular</th>
+                    </tr>
+                    
                 </tbody>
             </table>
         </div>
